// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea component should match snapshots 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 16px;
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1:hover,
.c1:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

<div
  className="c0"
>
  <textarea
    className="c1"
    disabled={false}
    id="textarea-0"
    onChange={[Function]}
    placeholder=""
    required={false}
    value=""
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 2`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 16px;
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1:hover,
.c1:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

<div
  className="c0"
>
  <textarea
    className="c1"
    disabled={false}
    id="textarea-1"
    onChange={[Function]}
    placeholder=""
    required={false}
    value="foo"
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 3`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 16px;
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="textarea-2"
  >
    Text label
  </label>
  <textarea
    className="c2"
    disabled={false}
    id="textarea-2"
    onChange={[Function]}
    placeholder=""
    required={false}
    value=""
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 4`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
}

.c2 {
  color: #ec584e;
}

.c3 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 16px;
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3::-webkit-calendar-picker-indicator,
.c3::-webkit-search-cancel-button {
  display: none;
}

.c3::-ms-clear {
  display: none;
}

.c3:hover,
.c3:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c3[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="textarea-3"
  >
    Text label
    <em
      className="c2"
    >
      *
    </em>
  </label>
  <textarea
    className="c3"
    disabled={false}
    id="textarea-3"
    onChange={[Function]}
    placeholder=""
    required={true}
    value=""
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 5`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 16px;
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1:hover,
.c1:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

<div
  className="c0"
>
  <textarea
    className="c1"
    disabled={true}
    id="textarea-4"
    onChange={[Function]}
    placeholder=""
    required={false}
    value=""
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 6`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 16px;
  color: #999999;
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1:hover,
.c1:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

<div
  className="c0"
>
  <textarea
    className="c1"
    disabled={false}
    id="textarea-5"
    onChange={[Function]}
    placeholder="this input has a placeholder"
    required={false}
    value=""
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 7`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  display: block;
  margin: 8px 0 0;
  color: #424242;
}

.c1 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 16px;
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1:hover,
.c1:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

<div
  className="c0"
>
  <textarea
    className="c1"
    disabled={false}
    id="textarea-6"
    onChange={[Function]}
    placeholder=""
    required={false}
    value=""
  />
  <span
    className="c2"
  >
    this is a helper text
  </span>
  
</div>
`;

exports[`TextArea component should match snapshots 8`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  display: block;
  margin: 8px 0 0;
}

.c1 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 16px;
  border-color: #e91b0c;
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1:hover,
.c1:focus {
  border-color: #e91b0c;
  box-shadow: 0px 3px 1px -2px rgba(233,27,12,0.2),0px 2px 2px 0px rgba(233,27,12,0.14),0px 1px 5px 0px rgba(233,27,12,0.12);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

<div
  className="c0"
>
  <textarea
    className="c1"
    disabled={false}
    id="textarea-7"
    onChange={[Function]}
    placeholder=""
    required={false}
    value=""
  />
  
  <span
    className="c2"
  >
    Error message
  </span>
</div>
`;
